# algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp  methods.h  nodes.h  utility.h
array/: CMakeLists.txt  arr.h  bulb-switcher-iii.cpp  contains-duplicate-ii.cpp  contains-duplicate.cpp  contiguous-array.cpp  fair-indexes.cpp  find-all-duplicates-in-an-array.cpp  find-all-numbers-disappeared-in-an-array.cpp  find-numbers-with-even-number-of-digits.cpp  first-missing-positive.cpp  largest-m-aligned-subset.cpp  max-chunks-to-make-sorted-ii.cpp  max-chunks-to-make-sorted.cpp  max-consecutive-ones.cpp  maximum-sum-circular-subarray.cpp  min-steps-to-make-piles-equal-height.cpp  mini-max-sum.cpp  minimum-domino-rotations-for-equal-row.cpp  move-zeroes.cpp  n-repeated-element-in-size-2n-array.cpp  next-permutation.cpp  non-decreasing-array.cpp  peak-index-in-a-mountain-array.cpp  prison-cells-after-n-days.cpp  product-of-array-except-self.cpp  rectangle-overlap.cpp  remove-duplicates-from-sorted-array.cpp  remove-element.cpp  shortest-unsorted-continuous-subarray.cpp  sort-colors.cpp  subarray-sum-equals-k.cpp
backtracking/: 24-game.cpp  CMakeLists.txt  README.md  backtracking.h  combination-sum-ii.cpp  combination-sum-iii.cpp  combination-sum.cpp  combinations.cpp  confusing-number-ii.cpp  expression-add-operators.cpp  generate-parenthesis.cpp  increasing-subsequences.cpp  knights-tour.cpp  letter-case-permutation.cpp  letter-combinations-of-a-phone-number.cpp  maximum-length-of-a-concatenated-string-with-unique-characters.cpp  maximum-score-words-formed-by-letters.cpp  n-queens-ii.cpp  n-queens.cpp  palindrome-partitioning.cpp  palindrome-permutation-ii.cpp  path-sum-ii.cpp  permutation-sequence.cpp  permutations-ii.cpp  permutations.cpp  remove-invalid-parentheses.cpp  restore-ip-addresses.cpp  subsets-ii.cpp  subsets.cpp  sudoku-solver.cpp  tiling-a-rectangle-with-the-fewest-squares.cpp  unique-paths-iii.cpp  word-break-ii.cpp
bfs/: CMakeLists.txt  bfs.h  cousins-in-binary-tree.cpp  employee-importance.cpp  island-perimeter.cpp  jump-game-iii.cpp  maximum-level-sum-of-a-binary-tree.cpp  minimum-knight-moves.cpp  populating-next-right-pointers-in-each-node.cpp  shortest-path-in-a-grid-with-obstacles-elimination.cpp  treasure-island.cpp
binary-search/: CMakeLists.txt  README.md  arranging-coins.cpp  binary-search.cpp  binary-search.h  capacity-to-ship-packages-within-d-days.cpp  divide-chocolate.cpp  find-first-and-last-position-of-element-in-sorted-array.cpp  find-k-closest-elements.cpp  find-minimum-in-rotated-sorted-array.cpp  find-peak-element.cpp  find-right-interval.cpp  find-smallest-letter-greater-than-target.cpp  find-the-smallest-divisor-given-a-threshold.cpp  guess-number-higher-or-lower.cpp  h-index-ii.cpp  heaters.cpp  intersection-of-two-arrays.cpp  is-subsequence.cpp  koko-eating-bananas.cpp  longest-duplicate-substring.cpp  max-sum-of-rectangle-no-larger-than-k.cpp  median-of-two-sorted-arrays.cpp  minimum-number-of-days-to-make-m-bouquets.cpp  missing-element-in-sorted-array.cpp  number-of-matching-subsequences.cpp  online-election.cpp  peak-index-in-a-mountain-array.cpp  random-pick-with-weight.cpp  search-a-2d-matrix.cpp  search-in-rotated-sorted-array-ii.cpp  search-in-rotated-sorted-array.cpp  search-insert-position.cpp  single-element-in-a-sorted-array.cpp  split-array-largest-sum.cpp  sqrt(x).cpp  sqrtx.cpp  sum-of-mutated-array-closest-to-target.cpp  swim-in-rising-water.cpp  the-k-weakest-rows-in-a-matrix.cpp  (+1 more)
bitwise/: CMakeLists.txt  README.md  binary-number-with-alternating-bits.cpp  binary-watch.cpp  bitwise-and-of-numbers-range.cpp  bitwise-ors-of-subarrays.cpp  bitwise.h  convert-a-number-to-hexadecimal.cpp  convert-binary-number-in-a-linked-list-to-integer.cpp  count-triplets-that-can-form-two-arrays-of-equal-xor.cpp  counting-bits.cpp  find-the-difference.cpp  hamming-distance.cpp  integer-replacement.cpp  k-th-symbol-in-grammar.cpp  majority-element.cpp  maximum-length-of-a-concatenated-string-with-unique-characters.cpp  maximum-product-of-word-lengths.cpp  maximum-xor-of-two-numbers-in-an-array.cpp  minimum-flips-to-make-a-or-b-equal-to-c.cpp  missing-number.cpp  number-complement.cpp  number-of-1-bits.cpp  number-of-steps-to-reduce-a-number-to-zero.cpp  number-of-valid-words-for-each-puzzle.cpp  partition-to-k-equal-sum-subsets.cpp  power-of-four.cpp  power-of-two.cpp  prime-number-of-set-bits-in-binary-representation.cpp  repeated-dna-sequences.cpp  reverse-bits.cpp  single-number-ii.cpp  single-number-iii.cpp  single-number.cpp  sort-integers-by-the-number-of-1-bits.cpp  subsets.cpp  sum-of-two-integers.cpp  total-hamming-distance.cpp  valid-sudoku.cpp
design/: CMakeLists.txt  README.md  design-circular-queue.cpp  design-hashset.cpp  design-tic-tac-toe.cpp  design-twitter.cpp  design.h  encode-and-decode-tinyurl.cpp  implement-magic-dictionary.cpp  implement-queue-using-stacks.cpp  implement-stack-using-queues.cpp  implement-trie(prefix-tree).cpp  implement-trie-prefix-tree.cpp  insert-delete-getrandom-O(1).cpp  insert-delete-getrandom-o1.cpp  lfu-cache.cpp  lru-cache.cpp  max-stack.cpp  maximum-frequency-stack.cpp  min-stack.cpp  my-calendar-i.cpp  snapshot-array.cpp
dfs/: CMakeLists.txt  count-univalue-subtrees.cpp  dfs.h  find-eventual-safe-states.cpp  keys-and-rooms.cpp  longest-univalue-path.cpp  minesweeper.cpp  reconstruct-itinerary.cpp  smallest-string-starting-from-leaf.cpp  surrounded-regions.cpp  validate-binary-search-tree.cpp
dp/: 2-keys-keyboard.cpp  CMakeLists.txt  README.md  best-time-to-buy-and-sell-stock-III.cpp  best-time-to-buy-and-sell-stock-IV.cpp  best-time-to-buy-and-sell-stock-ii.cpp  best-time-to-buy-and-sell-stock-with-cooldown.cpp  best-time-to-buy-and-sell-stock-with-transaction-fee.cpp  best-time-to-buy-and-sell-stock.cpp  burst-balloons.cpp  can-i-win.cpp  cheapest-flights-within-k-stops.cpp  cherry-pickup-II.cpp  cherry-pickup.cpp  coin-change.cpp  combination-sum-IV.cpp  count-numbers-with-unique-digits.cpp  count-square-submatrices-with-all-ones.cpp  count-vowels-permutation.cpp  counting-bits.cpp  dp.h  (+86 more)
(+770 files in other folders)
